      - :open now only opens files beginning with /, ./, ../, or ~/
      - :saveas now provides completions for default file names, and
        automatically chooses a filename when the save target is a
        directory.
      - Added :write !cmd and :write >>file.
      - Added :yank command.
      - :delmarks, :marks and :qmarks now also accept ranges, same as
        :delqmarks.
    * Improvements to :style and :highlight:
      - Added -agent flag to :style.
      - The -append flag now updates existing properties rather than
        simply appending its arguments to the previous value.
      - Active filters are now highlighted in :style listings.
      - :style-related commands now divide their completions between
        those active and inactive for the current site.
      - CSS property name completion is now available.
    * IMPORTANT option changes:
      - Boolean options no longer accept an argument.
      - 'cdpath' and 'runtimepath' no longer treat ",,"
        specially. Use "." instead.
      - 'incsearch', 'hlsearch', 'ignorecase', and 'smartcase' have
        been replaced with 'incfind', 'hlfind', and 'findcase'.
      - 'extendedhinttags' is now a regexpmap rather than a
        string.
      - 'guioptions' default value has changed.
      - 'laststatus' has been replaced with the "s" flag in
        'guioptions'.
      - 'linksearch' has been removed.  The \l search modifier can
        still be used for this purpose.
      - 'loadplugins' is now a regexplist option rather than
        a boolean.
      - 'mapleader' is now an option rather than a :let
        variable.
      - 'showstatuslinks' and 'showtabline' are now string options.
    * IMPORTANT: Command script files now use the *.penta file extension.
    * IMPORTANT: Plugins are now loaded from the 'plugins/'
      directory in 'runtimepath' rather than 'plugin/'.
    * IMPORTANT: Option value quoting has changed. List options will